CHanged colors and under construction sign

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
 <body class="gradient-background">
 
-    HEADER
-
     <header class="d-flex flex-wrap justify-content-center py-3">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -31,28 +29,13 @@
         </ul>
     </header>
 
-    <!-- <nav class="navbar navbar-expand-md">
-      Home 
-
-
-    </nav>
-
-    <div class="container">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-        </div>
-      </nav>
-    </div> -->
-
-
-
     <!-- TITLE -->
      <section id="title">
         <div class="px-4 py-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">Kateryna Gurina</h1>
+            <h2 class="display-5 fw-bold text-body-emphasis">Website still under construction :)</h2>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Hello! I am a second year physics student with a passion for computer science.</p>
+              <p class="lead mb-4">Hello! I am a first year physics student with a passion for computer science.</p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-light btn-lg px-4 gap-3">My projects</button>
                 <button type="button" class="btn btn-outline-light btn-lg px-4">Experience and education</button>
