--- a/index.html
+++ b/index.html
@@ -3,47 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kateryna</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body class="gradient-background">
 
     <header class="d-flex flex-wrap justify-content-center py-3">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4"><img src="./mochie.png" height="60" alt="logo cat"></span>
+        <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="./mochie_logo.png" height="60" alt="logo cat">
         </a>
-  
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
+            <li class="nav-item"><a href="cv.html" class="nav-link">Curriculum Vitae</a></li>
         </ul>
     </header>
 
-    <!-- TITLE -->
-     <section id="title">
+    <!-- TITLE Section with Buttons -->
+    <section id="title">
         <div class="px-4 py-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">Kateryna Gurina</h1>
-            <h2 class="display-5 fw-bold text-body-emphasis">Website still under construction :)</h2>
+            <h2 class="display-5 fw-bold text-body-emphasis">Welcome to my website!</h2>
             <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">Hello! I am a first year physics student with a passion for computer science.</p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-light btn-lg px-4 gap-3">My projects</button>
-                <button type="button" class="btn btn-outline-light btn-lg px-4">Experience and education</button>
-              </div>
+                <p class="lead mb-4">Hello! I am a first-year physics student with a passion for computer science.</p>
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <button onclick="window.location.href='about.html'" class="btn btn-light btn-lg px-4 gap-3">About Me</button>
+                    <button onclick="window.location.href='cv.html'" class="btn btn-outline-light btn-lg px-4">Curriculum Vitae</button>
+                </div>
             </div>
-          </div>
-     </section>
-
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        </div>
+    </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
