--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
         <h1 class="text-center display-5 fw-bold">Curriculum Vitae</h1>
 
         <h2>Kateryna Gurina</h2>
-        <p>Montreal, Canada | +1 514-814-8276 | katerynagurina@gmail.com | <a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
+        <p>Montreal, Canada | +1 514-814-8276 | katerynagurina@gmail.com | <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a> | <a href="https://github.com/KaterynaGurina">GitHub</a></p>
 
         <h3>Objective</h3>
         <p>
@@ -86,5 +86,13 @@
         <h3>Interests</h3>
         <p>Reading (fantasy and manga), Muay Thai, piano, tennis, and long walks with my dog.</p>
     </section>
+
+    <footer class="text-center py-3 mt-4">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
+            <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
