--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
         </div>
     </section>
     
+    <footer class="text-center py-3 mt-4">
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
+          <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
+          <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
+      </ul>
+  </footer>
+  
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
