--- a/about.html
+++ b/about.html
@@ -53,5 +53,13 @@
             Fun fact: I recently started designing websites to improve my skills in full-stack development. This very website is a testament to that journey!
         </p>
     </section>
+    
+    <footer class="text-center py-3 mt-4">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
+            <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
+        </ul>
+    </footer> 
 </body>
 </html>
