Fixed the home page and changed the colours

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
             <img src="./mochie_logo.png" height="60" alt="logo cat">
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link active">About Me</a></li>
-            <li class="nav-item"><a href="cv.html" class="nav-link">Curriculum Vitae</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link nav-buttons">Home</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link active nav-buttons">About Me</a></li>
+            <li class="nav-item"><a href="cv.html" class="nav-link nav-buttons">Curriculum Vitae</a></li>
         </ul>
     </header>
 
