--- a/index.html
+++ b/index.html
@@ -17,23 +17,17 @@
         <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <img src="./mochie_logo.png" height="60" alt="logo cat">
         </a>
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
-            <li class="nav-item"><a href="cv.html" class="nav-link">Curriculum Vitae</a></li>
-        </ul>
     </header>
 
     <!-- TITLE Section with Buttons -->
     <section id="title">
         <div class="px-4 py-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">Kateryna Gurina</h1>
-            <h2 class="display-5 fw-bold text-body-emphasis">Welcome to my website!</h2>
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-4">Hello! I am a first-year physics student with a passion for computer science.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button onclick="window.location.href='about.html'" class="btn btn-light btn-lg px-4 gap-3">About Me</button>
-                    <button onclick="window.location.href='cv.html'" class="btn btn-outline-light btn-lg px-4">Curriculum Vitae</button>
+                    <button onclick="window.location.href='about.html'" class="btn btn-light btn-lg px-5 gap-3 custom-button">About Me</button>
+                    <button onclick="window.location.href='cv.html'" class="btn btn-outline-light btn-lg px-4 custom-button">Curriculum Vitae</button>
                 </div>
             </div>
         </div>
@@ -45,7 +39,7 @@
           <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
           <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
       </ul>
-  </footer>
+    </footer>
   
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
