--- a/cv.html
+++ b/cv.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="gradient-background">
-    <header class="d-flex flex-wrap justify-content-center py-3">
+
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 mx-3">
         <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <img src="./mochie_logo.png" height="60" alt="logo cat">
         </a>
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About Me</a></li>
-            <li class="nav-item"><a href="cv.html" class="nav-link active">Curriculum Vitae</a></li>
-        </ul>
+        <div class="navbar d-flex sticky-top gap-2">
+            <button class="btn btn-outline-light" onclick="window.location.href='index.html'">Home</button>
+            <button class="btn btn-outline-light" onclick="window.location.href='about.html'">About Me</button>
+            <button class="btn btn-outline-light active" onclick="window.location.href='cv.html'">Curriculum Vitae</button>
+        </div>
     </header>
 
     <section id="cv" class="px-4 py-5 text-start">
@@ -89,9 +90,9 @@
 
     <footer class="text-center py-3 mt-4">
         <ul class="list-inline">
-            <li class="list-inline-item"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
-            <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
-            <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
+            <li class="list-inline-item link"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
+            <li class="list-inline-item link"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
+            <li class="list-inline-item link"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
         </ul>
     </footer>
 </body>
