--- a/index.html
+++ b/index.html
@@ -1,47 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kateryna</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-<body class="gradient-background">
-
+  <body class="gradient-background">
+    <!-- HEADER-->
     <header class="d-flex flex-wrap justify-content-center py-3">
-        <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-            <img src="./mochie_logo.png" height="60" alt="logo cat">
-        </a>
+      <a
+        href="index.html"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+      >
+        <img src="./mochie_logo.png" height="60" alt="logo cat" />
+      </a>
     </header>
 
     <!-- TITLE Section with Buttons -->
-    <section id="title">
-        <div class="px-4 py-5 text-center">
-            <h1 class="display-5 fw-bold text-body-emphasis">Kateryna Gurina</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Hello! I am a first-year physics student with a passion for computer science.</p>
-                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button onclick="window.location.href='about.html'" class="btn btn-light btn-lg px-5 gap-3 custom-button">About Me</button>
-                    <button onclick="window.location.href='cv.html'" class="btn btn-outline-light btn-lg px-4 custom-button">Curriculum Vitae</button>
-                </div>
-            </div>
+    <div class="container" id="home-container">
+      <!-- Left Section -->
+      <div class="text-section">
+        <h1>Kateryna Gurina</h1>
+        <p class="subtitle">
+          Hello! I am a first-year physics student with a passion for computer
+          science.
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button
+            onclick="window.location.href='about.html'"
+            class="btn btn-light btn-lg px-5 gap-3 custom-button"
+          >
+            About Me
+          </button>
+          <button
+            onclick="window.location.href='cv.html'"
+            class="btn btn-outline-light btn-lg px-4 custom-button"
+          >
+            Curriculum Vitae
+          </button>
         </div>
-    </section>
-    
+      </div>
+
+      <!-- Right Section -->
+      <div class="image-section">
+        <img src="./pic.jpg" alt="Developer" />
+      </div>
+    </div>
+
+    <!-- Footer -->
     <footer class="text-center py-3 mt-4">
       <ul class="list-inline">
-          <li class="list-inline-item"><a href="mailto:katerynagurina@gmail.com">Email</a></li>
-          <li class="list-inline-item"><a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a></li>
-          <li class="list-inline-item"><a href="https://github.com/KaterynaGurina">GitHub</a></li>
+        <li class="list-inline-item link">
+          <a href="mailto:katerynagurina@gmail.com">Email</a>
+        </li>
+        <li class="list-inline-item link">
+          <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/"
+            >LinkedIn</a
+          >
+        </li>
+        <li class="list-inline-item link">
+          <a href="https://github.com/KaterynaGurina">GitHub</a>
+        </li>
       </ul>
     </footer>
-  
-  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
