added nowrap for the phone number

--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@
       <!-- Personal Information -->
       <h2>Kateryna Gurina</h2>
       <p>
-        Montreal, Canada | +1 514-814-8276 |
+        Montreal, Canada | <span class="no-break">+1 514-814-8276</span> |
         <a href="mailto:katerynagurina@gmail.com">katerynagurina@gmail.com</a> |
         <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/"
           >LinkedIn</a
