--- a/about.html
+++ b/about.html
@@ -1,127 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Me</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body class="gradient-background">
-    <!--HEADER-->
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 mx-3">
-      <!--Mochie home button-->
-      <a
-        href="index.html"
-        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-      >
-        <img src="./mochie_logo.png" height="60" alt="logo cat" />
-      </a>
-      <!--Navbar div-->
-      <div class="navbar d-flex sticky-top gap-2">
-        <!--Home button-->
-        <button
-          class="btn btn-outline-light"
-          onclick="window.location.href='index.html'"
-        >
-          Home
-        </button>
-        <!--Active about me button-->
-        <button
-          class="btn btn-outline-light active"
-          onclick="window.location.href='about.html'"
-        >
-          About Me
-        </button>
-        <!--CV button-->
-        <button
-          class="btn btn-outline-light"
-          onclick="window.location.href='cv.html'"
-        >
-          Curriculum Vitae
-        </button>
-      </div>
-    </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | Kateryna Gurina</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <a href="index.html" class="logo">
+                <img src="./mochie_logo.png" alt="Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html" class="active">About</a>
+                <a href="cv.html">CV</a>
+            </nav>
+        </header>
 
-    <!--ABOUT ME CONTAINER-->
-    <div class="container text-section" id="flex-container">
-      <h1 class="display-5 fw-bold text-body-emphasis">About Me</h1>
-
-      <div class="mb-4">
-        <img
-          src="./pic.jpg"
-          alt="Profile Picture"
-          class="rounded-circle shadow"
-          style="width: 150px; height: 150px; object-fit: cover"
-        />
-      </div>
-
-      <p class="lead">
-        My name is Kateryna Gurina, and I’m a first-year biophysics
-        undergraduate with a minor in computer science at Concordia University.
-        I have a deep interest in the intersection of physics, computer science,
-        and how they can be applied to solve real-world problems.
-      </p>
-      <p class="lead">
-        Currently, I’m exploring topics like quantum biology from the side of my
-        major and full-stack development from the side of my minor. As the
-        president of the Concordia Undergraduate Biochemistry, Chemistry, and
-        Physics Society (CUBCAPS), I actively organize events to connect
-        students with research opportunities and foster collaboration.
-      </p>
-      <p class="lead">
-        Outside of academics, I enjoy practicing Muay Thai, playing piano
-        (classical mostly), and spending quality time with my dog Levi and cat
-        Mochie (he happens to be the logo of this website that you see in the
-        top left corner). I’m also passionate about traveling, exploring new
-        cultures, and trying different cuisines!
-      </p>
-
-      <div class="pets d-flex flex-wrap justify-content-evenly text-center p-3">
-        <div>
-          <img
-            src="./mochie.jpg"
-            alt="Mochie the Cat"
-            class="img-fluid rounded shadow"
-            style="max-width: 200px"
-          />
-          <p class="lead mt-2">Mochie</p>
+        <h1>About Me</h1>
+        <div class="card">
+            <p>
+                I am a Physics student at Concordia University with a deep interest in how things work—whether it's the optics of a microscope or the memory management of a Java application.
+            </p>
+            <p>
+                My background in physics has trained me to approach problems analytically, breaking complex systems down into their fundamental variables. I am currently transitioning these skills into software engineering, with a focus on backend logic and system architecture.
+            </p>
         </div>
-        <div>
-          <img
-            src="./levi.jpg"
-            alt="Levi the Dog"
-            class="img-fluid rounded shadow"
-            style="max-width: 200px"
-          />
-          <p class="lead mt-2">Levi</p>
-        </div>
-      </div>
 
-      <p class="lead mt-4">
-        Fun fact: I recently started designing websites to improve my skills in
-        full-stack development. This very website is a testament to that
-        journey!
-      </p>
+        <h2 style="margin-top: 3rem; color: var(--accent-color);">The Team</h2>
+        <p>When I'm not coding or in the lab, I'm usually with my assistants.</p>
+        
+        <div class="pet-gallery">
+            <div class="card" style="text-align: center;">
+                <img src="./mochie.jpg" alt="Mochie" style="width: 100%; border-radius: 8px;">
+                <h3>Mochie</h3>
+                <p style="font-size: 0.9rem;">Chief Executive Officer</p>
+            </div>
+            
+            <div class="card" style="text-align: center;">
+                <img src="./levi.jpg" alt="Levi" style="width: 100%; border-radius: 8px;">
+                <h3>Levi</h3>
+                <p style="font-size: 0.9rem;">Head of Security</p>
+            </div>
+        </div>
+
+        <footer>
+            <a href="mailto:katerynagurina@gmail.com">Contact Me</a>
+        </footer>
     </div>
-
-    <footer class="text-center py-3 mt-4">
-      <ul class="list-inline">
-        <li class="list-inline-item link">
-          <a href="mailto:katerynagurina@gmail.com">Email</a>
-        </li>
-        <li class="list-inline-item link">
-          <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/"
-            >LinkedIn</a
-          >
-        </li>
-        <li class="list-inline-item link">
-          <a href="https://github.com/KaterynaGurina">GitHub</a>
-        </li>
-      </ul>
-    </footer>
-  </body>
+</body>
 </html>
