--- a/index.html
+++ b/index.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kateryna</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kateryna Gurina | Developer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <a href="index.html" class="logo">
+                <img src="./mochie_logo.png" alt="Logo">
+            </a>
+            <nav>
+                <a href="index.html" class="active">Home</a>
+                <a href="about.html">About</a>
+                <a href="cv.html">CV</a>
+            </nav>
+        </header>
 
-  <body class="gradient-background">
-    <!-- HEADER-->
-    <header class="d-flex flex-wrap justify-content-center py-3">
-      <a
-        href="index.html"
-        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-      >
-        <img src="./mochie_logo.png" height="60" alt="logo cat" />
-      </a>
-    </header>
+        <section class="hero">
+            <div class="hero-content">
+                <span class="subtitle">Hi, I'm Kateryna</span>
+                <h1>Building logic<br>behind the lens.</h1>
+                <p>Physics & CS Student at Concordia University. Building scalable backend systems and solving concurrency problems.</p>
+                <div class="tech-stack">
+                    <span class="pill">Java</span>
+                    <span class="pill">Node.js</span>
+                    <span class="pill">React</span>
+                    <span class="pill">PostgreSQL</span>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="./pic.jpg" alt="Kateryna Gurina">
+            </div>
+        </section>
 
-    <!-- TITLE Section with Buttons -->
-    <div class="container" id="home-container">
-      <!-- Left Section -->
-      <div class="text-section">
-        <h1>Kateryna Gurina</h1>
-        <p class="subtitle">
-          Hello! I am a first-year physics student with a passion for computer
-          science.
-        </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button
-            onclick="window.location.href='about.html'"
-            class="btn btn-light btn-lg px-5 gap-3 custom-button"
-          >
-            About Me
-          </button>
-          <button
-            onclick="window.location.href='cv.html'"
-            class="btn btn-outline-light btn-lg px-4 custom-button"
-          >
-            Curriculum Vitae
-          </button>
-        </div>
-      </div>
+        <section id="projects">
+            <h2>Featured Projects</h2>
+            <div class="projects-grid">
+                
+                <div class="card">
+                    <h3>Dining Philosophers</h3>
+                    <p>Java concurrency implementation using the Monitor pattern to prevent deadlock and ensure thread safety.</p>
+                    <div class="tech-stack">
+                        <span class="pill">Java</span>
+                        <span class="pill">Multithreading</span>
+                    </div>
+                    <a href="https://github.com/KaterynaGurina/DinigPhilosophers.git" style="color:var(--accent-color)">View Code &rarr;</a>
+                </div>
 
-      <!-- Right Section -->
-      <div class="image-section">
-        <img src="./pic.jpg" alt="Developer" />
-      </div>
+                <div class="card">
+                    <h3>Restaurant Search API</h3>
+                    <p>Backend service managing 50+ restaurants with filtering, input validation, and admin authentication.</p>
+                    <div class="tech-stack">
+                        <span class="pill">Node.js</span>
+                        <span class="pill">Express</span>
+                        <span class="pill">REST</span>
+                    </div>
+                    <a href="https://github.com/KaterynaGurina/Restaurant-Search-API.git" style="color:var(--accent-color)">View Code &rarr;</a>
+                </div>
+
+                <div class="card">
+                    <h3>FitCat Tracker</h3>
+                    <p>Full-stack fitness app. Calculates BMR/TDEE and visualizes nutrition data via external APIs.</p>
+                    <div class="tech-stack">
+                        <span class="pill">JavaScript</span>
+                        <span class="pill">EJS</span>
+                        <span class="pill">Bootstrap</span>
+                    </div>
+                    <a href="https://github.com/KaterynaGurina/fitCat" style="color:var(--accent-color)">View Code &rarr;</a>
+                </div>
+
+            </div>
+        </section>
+
+        <footer>
+            <a href="mailto:katerynagurina@gmail.com">Email</a>
+            <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/">LinkedIn</a>
+            <a href="https://github.com/KaterynaGurina">GitHub</a>
+        </footer>
     </div>
-
-    <!-- Footer -->
-    <footer class="text-center py-3 mt-4">
-      <ul class="list-inline">
-        <li class="list-inline-item link">
-          <a href="mailto:katerynagurina@gmail.com">Email</a>
-        </li>
-        <li class="list-inline-item link">
-          <a href="https://www.linkedin.com/in/kateryna-gurina-156512160/"
-            >LinkedIn</a
-          >
-        </li>
-        <li class="list-inline-item link">
-          <a href="https://github.com/KaterynaGurina">GitHub</a>
-        </li>
-      </ul>
-    </footer>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+</body>
 </html>
