--- a/index-fr.html
+++ b/index-fr.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kateryna Gurina | Developer</title>
+    <title>Kateryna Gurina | Développeuse</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <a href="index.html" class="logo">
+            <a href="index-fr.html" class="logo">
                 <img src="./mochie_logo.png" alt="Logo">
             </a>
             <nav style="display: flex; align-items: center;">
-                <a href="index.html" class="active">Home</a> <a href="about.html">About</a>
-                <a href="cv.html">CV</a>
+                <a href="index-fr.html" class="active">Accueil</a>
+                <a href="about-fr.html">À Propos</a>
+                <a href="cv-fr.html">CV</a>
                 <span style="margin: 0 1rem; color: #334155;">|</span>
-                <a href="index-fr.html" style="font-weight: 700; color: var(--accent-color);">FR</a>
+                <a href="index.html" style="font-weight: 700; color: var(--accent-color);">EN</a>
             </nav>
         </header>
 
         <section class="hero">
             <div class="hero-content">
-                <span class="subtitle">Hi, I'm Kateryna</span>
-                <h1>Building logic<br>behind the lens.</h1>
-                <p>Physics & CS Student at Concordia University. Building scalable backend systems and solving concurrency problems.</p>
+                <span class="subtitle">Bonjour, je suis Kateryna</span>
+                <h1>La logique<br>derrière l'objectif.</h1>
+                <p>Étudiante en Physique et Informatique à Concordia. Je conçois des systèmes backend évolutifs et résous des problèmes de concurrence complexes.</p>
                 <div class="tech-stack">
                     <span class="pill">Java</span>
                     <span class="pill">Node.js</span>
@@ -39,39 +40,39 @@
         </section>
 
         <section id="projects">
-            <h2>Featured Projects</h2>
+            <h2>Projets Récents</h2>
             <div class="projects-grid">
                 
                 <div class="card">
-                    <h3>Dining Philosophers</h3>
-                    <p>Java concurrency implementation using the Monitor pattern to prevent deadlock and ensure thread safety.</p>
+                    <h3>Les Philosophes (Dining Philosophers)</h3>
+                    <p>Simulation de concurrence en Java utilisant le patron Moniteur pour prévenir les interblocages (deadlock).</p>
                     <div class="tech-stack">
                         <span class="pill">Java</span>
                         <span class="pill">Multithreading</span>
                     </div>
-                    <a href="https://github.com/KaterynaGurina/DinigPhilosophers.git" style="color:var(--accent-color)">View Code &rarr;</a>
+                    <a href="https://github.com/KaterynaGurina/DiningPhilosophers.git" style="color:var(--accent-color)">Voir le Code &rarr;</a>
                 </div>
 
                 <div class="card">
-                    <h3>Restaurant Search API</h3>
-                    <p>Backend service managing 50+ restaurants with filtering, input validation, and admin authentication.</p>
+                    <h3>API de Recherche de Restaurants</h3>
+                    <p>Service backend gérant 50+ restaurants avec filtrage, validation des entrées et authentification admin.</p>
                     <div class="tech-stack">
                         <span class="pill">Node.js</span>
                         <span class="pill">Express</span>
                         <span class="pill">REST</span>
                     </div>
-                    <a href="https://github.com/KaterynaGurina/Restaurant-Search-API.git" style="color:var(--accent-color)">View Code &rarr;</a>
+                    <a href="https://github.com/KaterynaGurina/Restaurant-Search-API.git" style="color:var(--accent-color)">Voir le Code &rarr;</a>
                 </div>
 
                 <div class="card">
                     <h3>FitCat Tracker</h3>
-                    <p>Full-stack fitness app. Calculates BMR/TDEE and visualizes nutrition data via external APIs.</p>
+                    <p>Application fitness full-stack. Calcule le BMR/TDEE et visualise les données nutritionnelles via des API externes.</p>
                     <div class="tech-stack">
                         <span class="pill">JavaScript</span>
                         <span class="pill">EJS</span>
                         <span class="pill">Bootstrap</span>
                     </div>
-                    <a href="https://github.com/KaterynaGurina/fitCat" style="color:var(--accent-color)">View Code &rarr;</a>
+                    <a href="https://github.com/KaterynaGurina/fitCat" style="color:var(--accent-color)">Voir le Code &rarr;</a>
                 </div>
 
             </div>
