--- a/about.html
+++ b/about.html
@@ -13,10 +13,12 @@
             <a href="index.html" class="logo">
                 <img src="./mochie_logo.png" alt="Logo">
             </a>
-            <nav>
+            <nav style="display: flex; align-items: center;">
                 <a href="index.html">Home</a>
                 <a href="about.html" class="active">About</a>
                 <a href="cv.html">CV</a>
+                <span style="margin: 0 1rem; color: #334155;">|</span>
+                <a href="about-fr.html" style="font-weight: 700; color: var(--accent-color);">FR</a>
             </nav>
         </header>
 
