--- a/cv.html
+++ b/cv.html
@@ -13,16 +13,19 @@
             <a href="index.html" class="logo">
                 <img src="./mochie_logo.png" alt="Logo">
             </a>
-            <nav>
+            <nav style="display: flex; align-items: center;">
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="cv.html" class="active">CV</a>
+                <span style="margin: 0 1rem; color: #334155;">|</span>
+                <a href="cv-fr.html" style="font-weight: 700; color: var(--accent-color);">FR</a>
             </nav>
         </header>
 
         <h1>Curriculum Vitae</h1>
         <p style="color:var(--text-secondary); margin-bottom: 3rem;">
             Physics student with research experience and full-stack development skills.
+            <br><a href="./Kateryna_Gurina_CV.pdf" target="_blank" style="color:var(--accent-color); font-size: 0.9rem;">Download PDF Version</a>
         </p>
 
         <div class="cv-block">
